<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nome_completoEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_completo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_completoEt" />

    <CheckBox
        android:id="@+id/receberNotificacaoCb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/receber_notificacao"
        app:layout_constraintTop_toBottomOf="@+id/emailEt"
        />

    <EditText
        android:id="@+id/telefoneEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receberNotificacaoCb" />

    <RadioGroup
        android:id="@+id/tipoTelefoneRg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/telefoneEt">

        <RadioButton
            android:id="@+id/comerciarlRb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_weight="1"
            android:text="@string/comercial"
            />
        <RadioButton
            android:id="@+id/fixoRb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_weight="1"
            android:text="@string/fixo"
            />

    </RadioGroup>

    <CheckBox
        android:id="@+id/adicionarTelefoneCb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/adicionar_telefone"
        app:layout_constraintTop_toBottomOf="@+id/tipoTelefoneRg"
        />

    <EditText
        android:id="@+id/telefoneCelularEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/celular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adicionarTelefoneCb"
        android:visibility="gone"
        />

    <RadioGroup
        android:id="@+id/sexoRg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/telefoneCelularEt">

        <RadioButton
            android:id="@+id/masculinoRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_weight="1"
            android:text="@string/masculino"
            />
        <RadioButton
            android:id="@+id/femininoRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_weight="1"
            android:text="@string/feminino"
            />
    </RadioGroup>


    <EditText
        android:id="@+id/dataNascimentoEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/data_nascimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexoRg"
        />

    <Spinner
        android:id="@+id/FormacaoSp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/formacoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dataNascimentoEt" />

    <EditText
        android:id="@+id/anoFormacaoEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ano_formacao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/FormacaoSp"
        />

    <EditText
        android:id="@+id/anoDeConclusaoEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ano_conclusao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/anoFormacaoEt"
        />

    <EditText
        android:id="@+id/instituicaoEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/instituicao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/anoDeConclusaoEt"
        />

    <EditText
        android:id="@+id/tituloEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/instituicaoEt"
        />

    <EditText
        android:id="@+id/orientadorEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/orientador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/tituloEt"
        />

    <EditText
        android:id="@+id/vagasDeInteresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vagas_de_interesse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orientadorEt"
        />

    <Button
        android:id="@+id/limparBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limpar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vagasDeInteresse"
        app:layout_constraintVertical_bias="0.462" />

    <Button
        android:id="@+id/salvarBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vagasDeInteresse"
        app:layout_constraintVertical_bias="0.498" />

</androidx.constraintlayout.widget.ConstraintLayout>